--- a/openfisca_barcelona/tests/benefits/GE-051-00.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-00.yaml
@@ -3,7 +3,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
