--- a/openfisca_barcelona/tests/benefits/GE-051-01.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-01.yaml
@@ -3,7 +3,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -31,7 +31,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1", "adult2"]
+     sustentadors_i_custodia: ["adult1", "adult2"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1", "adult2"]
   families_fins_a_segon_grau:
@@ -73,7 +73,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -100,7 +100,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -127,7 +127,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -154,7 +154,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -181,7 +181,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -208,7 +208,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -235,7 +235,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -262,7 +262,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -289,7 +289,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -316,7 +316,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
