--- a/openfisca_barcelona/tests/benefits/GE-051-03.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-03.yaml
@@ -3,7 +3,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -30,7 +30,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -56,7 +56,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -82,7 +82,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -108,7 +108,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -134,7 +134,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -160,7 +160,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -186,7 +186,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -212,7 +212,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
@@ -238,7 +238,7 @@
   period: 2017-01
   absolute_error_margin: false
   families:
-     adults: ["adult1"]
+     sustentadors_i_custodia: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
   families_fins_a_segon_grau:
