--- a/openfisca_barcelona/tests/benefits/AE-230.yaml
+++ b/openfisca_barcelona/tests/benefits/AE-230.yaml
@@ -3,7 +3,7 @@
   period: 2017-01
   absolute_error_margin: 0
   families:
-    adults: ["pare1", "mare1"]
+    sustentadors_i_custodia: ["pare1", "mare1"]
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
@@ -40,7 +40,7 @@
   period: 2017-01
   absolute_error_margin: 0
   families:
-    adults: ["pare1", "mare1"]
+    sustentadors_i_custodia: ["pare1", "mare1"]
     menors: ["infant1"]
     altres_persones: ["no_familiar"]
     domicili_a_barcelona_ciutat: true
@@ -81,7 +81,7 @@
   period: 2017-01
   absolute_error_margin: 0
   families:
-    adults: ["pare1", "mare1"]
+    sustentadors_i_custodia: ["pare1", "mare1"]
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
@@ -117,7 +117,7 @@
   period: 2017-01
   absolute_error_margin: 0
   families:
-    adults: ["pare1"]
+    sustentadors_i_custodia: ["pare1"]
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
@@ -148,7 +148,7 @@
   period: 2017-01
   absolute_error_margin: 0
   families:
-    adults: ["pare1"]
+    sustentadors_i_custodia: ["pare1"]
     menors: ["infant1", "infant2"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
@@ -184,7 +184,7 @@
   period: 2017-01
   absolute_error_margin: 0
   families:
-    adults: ["pare1"]
+    sustentadors_i_custodia: ["pare1"]
     menors: ["infant1", "infant2"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
@@ -220,7 +220,7 @@
   period: 2017-01
   absolute_error_margin: 0
   families:
-    adults: ["pare1", "mare1"]
+    sustentadors_i_custodia: ["pare1", "mare1"]
     menors: ["infant1", "infant2"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
