--- a/openfisca_barcelona/parameters/benefits/AE230/import_ajuda.yaml
+++ b/openfisca_barcelona/parameters/benefits/AE230/import_ajuda.yaml
@@ -1,5 +1,27 @@
-description: Benefit amount
-reference: openfisca
-values:
-  2017-01-01:
-    value: 100
+compartida:
+  primer:
+    values:
+      2017-01-01:
+        value: 50
+  segon:
+    values:
+      2017-01-01:
+        value: 37.5
+  tercer_o_mes:
+    values:
+      2017-01-01:
+        value: 25
+
+total:
+  primer:
+    values:
+      2017-01-01:
+        value: 100
+  segon:
+    values:
+      2017-01-01:
+        value: 75
+  tercer_o_mes:
+    values:
+      2017-01-01:
+        value: 50
