--- a/openfisca_barcelona/tests/benefits/GG-270.yaml
+++ b/openfisca_barcelona/tests/benefits/GG-270.yaml
@@ -314,3 +314,46 @@
      data_naixement: '2008-03-15'
   output_variables:
      GG_270_mensual: [ 661, 0 ]
+
+
+- name: "Algorithm selects the person with a higher benefit"
+  description: Ajuda lloguer just
+  period: 2017-01
+  absolute_error_margin: false
+  families:
+     sustentadors_i_custodia: ["adult", "adult1"]
+     menors: ["menor"]
+     tipus_familia_monoparental: general
+  unitats_de_convivencia:
+     persones_que_conviuen: ["adult", "adult1", "menor"]
+  families_fins_a_segon_grau:
+     familiars: ["adult", "adult1", "menor"]
+  persones:
+   - id: "adult"
+     data_naixement: '1980-03-15'
+     ingressos_bruts_ultims_sis_mesos: 1800
+     es_orfe_dels_dos_progenitors: false
+     es_victima_de_violencia_masclista: false
+     es_divorciada_de_familia_reagrupada: false
+     porta_dos_anys_o_mes_empadronat_a_catalunya: true
+     beneficiari_de_prestacio_residencial: false
+     ingressat_en_centre_penitenciari: false
+     en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
+     inscrit_com_a_demandant_docupacio: false
+     situacio_laboral: treball_compte_daltri_jornada_parcial
+   - id: "adult1"
+     data_naixement: '1980-03-15'
+     ingressos_bruts_ultims_sis_mesos: 1500
+     es_orfe_dels_dos_progenitors: false
+     es_victima_de_violencia_masclista: false
+     es_divorciada_de_familia_reagrupada: false
+     porta_dos_anys_o_mes_empadronat_a_catalunya: true
+     beneficiari_de_prestacio_residencial: false
+     ingressat_en_centre_penitenciari: false
+     en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
+     inscrit_com_a_demandant_docupacio: false
+     situacio_laboral: treball_compte_daltri_jornada_parcial
+   - id: "menor"
+     data_naixement: '2008-03-15'
+  output_variables:
+     GG_270_mensual: [ 0, 734, 0 ]
